--- a/docs/style.css
+++ b/docs/style.css
@@ -24,3 +24,21 @@
 .basic {
 	font-family: RIDIBatang;
 }
+
+table {
+	width: 100%;
+	border-top: 1px solid #444444;
+	border-collapse: collapse;
+}
+th, td {
+	border-bottom: 1px solid #444444;
+	padding: 10px;
+	text-align: center;
+}
+
+th:nth-child(2n), td:nth-child(2n) {
+	background-color: #bbdefb;
+}
+th:nth-child(2n+1), td:nth-child(2n+1) {
+	background-color: #e3f2fd;
+}
